--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -115,6 +115,12 @@
 
     <!-- 计时器的超时时间，单位(秒) -->
     <add key="timerTimeOutInterval" value="8" />
+
+    <!-- 是否用模拟器进行性能测试 -->
+    <add key="simuTest" value="0" />
+
+    <!-- 数据对齐基准:0表示数据库为基准，1表示以Ap为基准 -->
+    <add key="dataAlignMode" value="0" />   
     
   </appSettings>
 </configuration>
