--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -12,7 +12,7 @@
     <add key="strDbSwitch" value="1" />
 
     <!-- 数据库的IP地址 -->
-    <add key="strDbIpAddr" value="172.17.0.212" />
+    <add key="strDbIpAddr" value="127.0.0.1" />
 
     <!-- 数据库的名称 -->
     <add key="strDbName" value="scanner_server" />
@@ -36,13 +36,13 @@
     <add key="strDbBatchUpdateRecordsLevel" value="6" />
 
     <!-- 数据库最大的Idle时间，秒数 -->
-    <add key="strDbMaxIdleSeconds" value="60" />
+    <add key="strDbMaxIdleSeconds" value="20" />
 
     <!-- FTP总开关 -->
     <add key="strFtpSwitch" value="1" />
 
     <!-- FTP的IP地址 -->
-    <add key="strFtpIpAddr" value="172.17.0.210" />
+    <add key="strFtpIpAddr" value="172.17.1.207" />
 
     <!-- FTP的登录用户名 -->
     <add key="strFtpUserId" value="ftpuser" />
@@ -69,10 +69,16 @@
     <add key="strFtpBatchUpdateRecordsLevel" value="6" />
 
     <!-- FTP的最大Idle时间，秒数 -->
-    <add key="strFtpMaxIdleSeconds" value="60" />
+    <add key="strFtpMaxIdleSeconds" value="20" />
 
-    <!-- GSM的端口号 -->
-    <add key="strStartPortGSM" value="14785" />
+    <!-- ZYF-CDMA的端口号 -->
+    <add key="strStartPortCDMA_ZYF" value="14783" />
+
+    <!-- ZYF-GSM的端口号 -->
+    <add key="strStartPortGSM_ZYF" value="14784" />    
+    
+    <!-- HJT-GSM的端口号 -->
+    <add key="strStartPortGSM_HJT" value="14785" />
 
     <!-- LTE的端口号 -->
     <add key="strStartPortLTE" value="14786" />
@@ -114,13 +120,16 @@
     <add key="recordsOfPageSize" value="200" />
 
     <!-- 计时器的超时时间，单位(秒) -->
-    <add key="timerTimeOutInterval" value="8" />
+    <add key="timerTimeOutInterval" value="5" />
 
     <!-- 是否用模拟器进行性能测试 -->
     <add key="simuTest" value="0" />
 
-    <!-- 数据对齐基准:0表示数据库为基准，1表示以Ap为基准 -->
-    <add key="dataAlignMode" value="0" />   
-    
+    <!-- 数据对齐基准:0数据库为基准，1以Ap为基准，2不对齐 -->
+    <add key="dataAlignMode" value="2" />
+
+    <!-- 号码归属地计算方式：0直接从接口，1接口加哈希 -->
+    <add key="imsiParseMode" value="1" />
+
   </appSettings>
 </configuration>
