--- a/ScannerBackgrdServer/ScannerBackgrdServer.csproj
+++ b/ScannerBackgrdServer/ScannerBackgrdServer.csproj
@@ -77,7 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApController\ApManager.cs" />
-    <Compile Include="ApController\Ap_GSM.cs" />
+    <Compile Include="ApController\Ap_CDMA_ZYF.cs" />
+    <Compile Include="ApController\Ap_GSM_HJT.cs" />
+    <Compile Include="ApController\Ap_GSM_ZYF.cs" />
     <Compile Include="ApController\Ap_Lte.cs" />
     <Compile Include="ApController\Ap_WCDMA.cs" />
     <Compile Include="ApController\AsyncUserToken.cs" />
