修改cdma产品功能

--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -5,14 +5,36 @@
     </startup>
   <appSettings>
 
+    <!-- 数据库的IP地址 -->
+    <add key="strDbIpAddr" value="127.0.0.1" />
+
+    <!-- FTP服务器的IP地址 -->
+    <add key="strFtpIpAddr" value="172.17.1.207" />
+
+    <!-- Log的输出等级， 
+         DEBG = 0, INFO = 1,
+         WARN = 2, EROR = 3 
+    -->
+    <add key="logOutputLevel" value="0" />
+
+    <!-- Log的输出类型， 
+         File = 0 
+         Net  = 1
+         Both = 2
+    -->
+    <add key="logOutputType" value="0" />
+
+    <!-- Log接收的服务器IP地址 -->
+    <add key="strLogIpAddr" value="127.0.0.1" />
+
+    <!-- Log接收的服务器端口 -->
+    <add key="strLogPort" value="23456" />
+    
     <!-- Scanner后台服务器调试模式 -->
     <add key="strAppDebugMode" value="1" />
 
-    <!-- 数据库总开关 -->
-    <add key="strDbSwitch" value="1" />
-
-    <!-- 数据库的IP地址 -->
-    <add key="strDbIpAddr" value="127.0.0.1" />
+    <!-- 数据库上传IMSI的开关 -->
+    <add key="strDbSwitch" value="1" />   
 
     <!-- 数据库的名称 -->
     <add key="strDbName" value="scanner_server" />
@@ -35,14 +57,8 @@
     -->
     <add key="strDbBatchUpdateRecordsLevel" value="6" />
 
-    <!-- 数据库最大的Idle时间，秒数 -->
-    <add key="strDbMaxIdleSeconds" value="20" />
-
-    <!-- FTP总开关 -->
-    <add key="strFtpSwitch" value="1" />
-
-    <!-- FTP的IP地址 -->
-    <add key="strFtpIpAddr" value="172.17.1.207" />
+    <!-- FTP上传IMSI的开关 -->
+    <add key="strFtpSwitch" value="0" />    
 
     <!-- FTP的登录用户名 -->
     <add key="strFtpUserId" value="ftpuser" />
@@ -66,10 +82,7 @@
          7: 50,100,150,200,250,300,350
          8: 50,100,150,200,250,300,350,400
     -->
-    <add key="strFtpBatchUpdateRecordsLevel" value="6" />
-
-    <!-- FTP的最大Idle时间，秒数 -->
-    <add key="strFtpMaxIdleSeconds" value="20" />
+    <add key="strFtpBatchUpdateRecordsLevel" value="6" />    
 
     <!-- ZYF-CDMA的端口号 -->
     <add key="strStartPortCDMA_ZYF" value="14783" />
@@ -84,7 +97,7 @@
     <add key="strStartPortLTE" value="14786" />
 
     <!-- TDS的端口号 -->
-    <add key="strStartPortTDS" value="14787" />
+    <add key="strStartPortTDS" value="14787" />        
 
     <!-- WCDMA的端口号 -->
     <add key="strStartPortWCDMA" value="14788" />
@@ -103,13 +116,16 @@
 
     <!-- App在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为APp下线） -->
     <add key="appOnLineTime" value="80" />
-
-    <!-- Log的输出等级， DEBG = 0,INFO = 1,WARN = 2,EROR = 3 -->
-    <add key="logOutputLevel" value="0" />
-
+    
+     <!-- 数据库最大的Idle时间，秒数 -->
+    <add key="strDbMaxIdleSeconds" value="30" />
+    
+    <!-- FTP的最大Idle时间，秒数 -->
+    <add key="strFtpMaxIdleSeconds" value="60" />      
+    
     <!-- 检查FTP Server的连接状态的频率，秒数 -->
-    <add key="checkFtpConnStat" value="100" />
-
+    <add key="checkFtpConnStat" value="60" />
+        
     <!-- 对捕到的号是否进行去掉重复处理 -->
     <add key="removeDupMode" value="0" />
 
@@ -130,6 +146,9 @@
 
     <!-- 号码归属地计算方式：0直接从接口，1接口加哈希 -->
     <add key="imsiParseMode" value="1" />
+
+    <!-- 每个Log文件存放的Log条数 -->
+    <add key="logLinesPerFils" value="50000" />    
 
   </appSettings>
 </configuration>
