增加GSM_V2产品支持

--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -3,52 +3,57 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <probing privatePath="3rdLib;Lib" />
+        </assemblyBinding>
+    </runtime>
   <appSettings>
 
-    <!-- 数据库的IP地址 -->
-    <add key="strDbIpAddr" value="127.0.0.1" />
+    <!-- (1)数据库的IP地址 -->
+    <add key="strDbIpAddr"  value="127.0.0.1" />
 
-    <!-- FTP服务器的IP地址 -->
-    <add key="strFtpIpAddr" value="172.17.1.207" />
+    <!-- (2)FTP服务器的IP地址 -->
+    <add key="strFtpIpAddr" value="172.17.1.103" />
 
-    <!-- Log的输出等级， 
+    <!-- (3)Log的输出等级， 
          DEBG = 0, INFO = 1,
          WARN = 2, EROR = 3 
     -->
     <add key="logOutputLevel" value="0" />
 
-    <!-- Log的输出类型， 
+    <!-- (4)Log的输出类型， 
          File = 0 
          Net  = 1
          Both = 2
     -->
     <add key="logOutputType" value="0" />
 
-    <!-- Log接收的服务器IP地址 -->
+    <!-- (5)Log接收的服务器IP地址 -->
     <add key="strLogIpAddr" value="127.0.0.1" />
 
-    <!-- Log接收的服务器端口 -->
-    <add key="strLogPort" value="23456" />
+    <!-- (6)Log接收的服务器端口 -->
+    <add key="strLogPort" value="12345" />
     
-    <!-- Scanner后台服务器调试模式 -->
+    <!-- (7)Scanner后台服务器调试模式 -->
     <add key="strAppDebugMode" value="1" />
 
-    <!-- 数据库上传IMSI的开关 -->
+    <!-- (8)数据库上传IMSI的开关 -->
     <add key="strDbSwitch" value="1" />   
 
-    <!-- 数据库的名称 -->
+    <!-- (9)数据库的名称 -->
     <add key="strDbName" value="scanner_server" />
 
-    <!-- 数据库用户名 -->
+    <!-- (10)数据库用户名 -->
     <add key="strDbUserId" value="root" />
 
-    <!-- 数据库密码（密文） -->
+    <!-- (11)数据库密码（密文） -->
     <add key="strDbUserPsw" value="Af8SZ2BneUw=" />
 
-    <!-- 数据库端口号 -->
+    <!-- (12)数据库端口号 -->
     <add key="strDbPort" value="3306" />    
 
-    <!-- 数据库批量更新的记录数的等级
+    <!-- (13)数据库批量更新的记录数的等级
          4: 50,100,150,200
          5: 50,100,150,200,250
          6: 50,100,150,200,250,300
@@ -57,25 +62,25 @@
     -->
     <add key="strDbBatchUpdateRecordsLevel" value="6" />
 
-    <!-- FTP上传IMSI的开关 -->
-    <add key="strFtpSwitch" value="0" />    
+    <!-- (14)FTP上传IMSI的开关 -->
+    <add key="strFtpSwitch" value="1" />    
 
-    <!-- FTP的登录用户名 -->
+    <!-- (15)FTP的登录用户名 -->
     <add key="strFtpUserId" value="ftpuser" />
 
-    <!-- FTP的登录密码（密文） -->
+    <!-- (16)FTP的登录密码（密文） -->
     <add key="strFtpUserPsw" value="S4N5N1nIj1Y=" />
 
-    <!-- FTP的端口号 -->
+    <!-- (17)FTP的端口号 -->
     <add key="strFtpPort" value="21" />
 
-    <!-- FTP的IMSI目录 -->
+    <!-- (18)FTP的IMSI目录 -->
     <add key="strFtpImsiDir" value="IMSI" />
 
-    <!-- FTP的Update目录 -->
+    <!-- (19)FTP的Update目录 -->
     <add key="strFtpUpdateDir" value="Update" />        
 
-    <!-- FTP的批量更新记录数的等级
+    <!-- (1)FTP的批量更新记录数的等级
          4: 50,100,150,200
          5: 50,100,150,200,250
          6: 50,100,150,200,250,300
@@ -84,71 +89,74 @@
     -->
     <add key="strFtpBatchUpdateRecordsLevel" value="6" />    
 
-    <!-- ZYF-CDMA的端口号 -->
+    <!-- (20)ZYF-CDMA的端口号 -->
     <add key="strStartPortCDMA_ZYF" value="14783" />
 
-    <!-- ZYF-GSM的端口号 -->
+    <!-- (21)ZYF-GSM的端口号 -->
     <add key="strStartPortGSM_ZYF" value="14784" />    
     
-    <!-- HJT-GSM的端口号 -->
+    <!-- (22)HJT-GSM的端口号 -->
     <add key="strStartPortGSM_HJT" value="14785" />
 
-    <!-- LTE的端口号 -->
+    <!-- (23)LTE的端口号 -->
     <add key="strStartPortLTE" value="14786" />
 
-    <!-- TDS的端口号 -->
+    <!-- (24)TDS的端口号 -->
     <add key="strStartPortTDS" value="14787" />        
 
-    <!-- WCDMA的端口号 -->
+    <!-- (25)WCDMA的端口号 -->
     <add key="strStartPortWCDMA" value="14788" />
 
-    <!-- Windows的端口号 -->
+    <!-- (26)Windows的端口号 -->
     <add key="strStartPortAppWindows" value="14789" />
 
-    <!-- Linux的端口号 -->
+    <!-- (27)Linux的端口号 -->
     <add key="strStartPortAppLinux" value="14790" />
 
-    <!-- Android的端口号 -->
+    <!-- (28)Android的端口号 -->
     <add key="strStartPortAppAndroid" value="14791" />
 
-    <!-- Ap在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为AP下线） -->
+    <!-- (29)Ap在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为AP下线） -->
     <add key="apOnLineTime"  value="30" />
 
-    <!-- App在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为APp下线） -->
+    <!-- (30)App在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为APp下线） -->
     <add key="appOnLineTime" value="80" />
     
-     <!-- 数据库最大的Idle时间，秒数 -->
+    <!-- (31)数据库最大的Idle时间，秒数 -->
     <add key="strDbMaxIdleSeconds" value="30" />
     
-    <!-- FTP的最大Idle时间，秒数 -->
+    <!-- (32)FTP的最大Idle时间，秒数 -->
     <add key="strFtpMaxIdleSeconds" value="60" />      
     
-    <!-- 检查FTP Server的连接状态的频率，秒数 -->
+    <!-- (33)检查FTP Server的连接状态的频率，秒数 -->
     <add key="checkFtpConnStat" value="60" />
         
-    <!-- 对捕到的号是否进行去掉重复处理 -->
+    <!-- (34)对捕到的号是否进行去掉重复处理 -->
     <add key="removeDupMode" value="0" />
 
-    <!-- 去重的时间长度，分钟-->
+    <!-- (35)去重的时间长度，分钟-->
     <add key="removeDupTimeLength" value="120" />
 
-    <!-- 搜索历史记录的页大小，记录数-->
+    <!-- (36)搜索历史记录的页大小，记录数-->
     <add key="recordsOfPageSize" value="200" />
 
-    <!-- 计时器的超时时间，单位(秒) -->
+    <!-- (37)计时器的超时时间，单位(秒) -->
     <add key="timerTimeOutInterval" value="5" />
 
-    <!-- 是否用模拟器进行性能测试 -->
+    <!-- (38)是否用模拟器进行性能测试 -->
     <add key="simuTest" value="0" />
 
-    <!-- 数据对齐基准:0数据库为基准，1以Ap为基准，2不对齐 -->
+    <!-- (39)数据对齐基准:0数据库为基准，1以Ap为基准，2不对齐 -->
     <add key="dataAlignMode" value="2" />
 
-    <!-- 号码归属地计算方式：0直接从接口，1接口加哈希 -->
+    <!-- (40)号码归属地计算方式：0直接从接口，1接口加哈希 -->
     <add key="imsiParseMode" value="1" />
 
-    <!-- 每个Log文件存放的Log条数 -->
-    <add key="logLinesPerFils" value="50000" />    
+    <!-- (41)每个Log文件的大小，单位为MB -->
+    <add key="logMaxSize" value="10" />
+
+    <!-- (42)Logger的最大Idle时间，秒数 -->
+    <add key="logMaxIdleSeconds" value="10" />
 
   </appSettings>
 </configuration>
