--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -20,7 +20,7 @@
          DEBG = 0, INFO = 1,
          WARN = 2, EROR = 3 
     -->
-    <add key="logOutputLevel" value="0" />
+    <add key="logOutputLevel" value="3" />
 
     <!-- (4)Log的输出类型， 
          File = 0 
@@ -151,11 +151,14 @@
 
     <!-- (40)号码归属地计算方式：0直接从接口，1接口加哈希 -->
     <add key="imsiParseMode" value="1" />
+    
+    <!-- (41)号码归属地内存保存的最大个数 -->
+    <add key="imsiParseMaxCnt" value="20000" />
 
-    <!-- (41)每个Log文件的大小，单位为MB -->
+    <!-- (42)每个Log文件的大小，单位为MB -->
     <add key="logMaxSize" value="10" />
 
-    <!-- (42)Logger的最大Idle时间，秒数 -->
+    <!-- (43)Logger的最大Idle时间，秒数 -->
     <add key="logMaxIdleSeconds" value="10" />
 
   </appSettings>
