--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -11,10 +11,10 @@
   <appSettings>
 
     <!-- (1)数据库的IP地址 -->
-    <add key="strDbIpAddr"  value="172.17.0.212" />
+    <add key="strDbIpAddr"  value="127.0.0.1" />
 
     <!-- (2)FTP服务器的IP地址 -->
-    <add key="strFtpIpAddr" value="172.17.0.212" />
+    <add key="strFtpIpAddr" value="172.17.1.103" />
 
     <!-- (3)Log的输出等级， 
          DEBG = 0, INFO = 1,
@@ -71,14 +71,26 @@
     <!-- (16)FTP的登录密码（密文） -->
     <add key="strFtpUserPsw" value="S4N5N1nIj1Y=" />
 
+    <!-- (16.1)FTP的登录用户名 -->
+    <add key="strLogUserId" value="loguser" />
+
+    <!-- (16.2)FTP的登录密码（密文） -->
+    <add key="strLogUserPsw" value="No7MLhtnTl4=" />    
+
     <!-- (17)FTP的端口号 -->
     <add key="strFtpPort" value="21" />
 
     <!-- (18)FTP的IMSI目录 -->
     <add key="strFtpImsiDir" value="IMSI" />
+    
+    <!-- (19)AP的FTP的上传目录 -->
+    <add key="strApFtpUploadDir" value="ApFtp" />
 
-    <!-- (19)FTP的Update目录 -->
-    <add key="strFtpUpdateDir" value="Update" />        
+    <!-- (20)FTP的Update目录 -->
+    <add key="strFtpUpdateDir" value="Update" />
+
+    <!-- (20.1)FTP的ApLog目录 -->
+    <add key="strFtpApLogDir" value="ApLog" />
 
     <!-- (1)FTP的批量更新记录数的等级
          4: 50,100,150,200
@@ -89,77 +101,92 @@
     -->
     <add key="strFtpBatchUpdateRecordsLevel" value="6" />    
 
-    <!-- (20)ZYF-CDMA的端口号 -->
+    <!-- (21)ZYF-CDMA的端口号 -->
     <add key="strStartPortCDMA_ZYF" value="14783" />
 
-    <!-- (21)ZYF-GSM的端口号 -->
+    <!-- (22)ZYF-GSM的端口号 -->
     <add key="strStartPortGSM_ZYF" value="14784" />    
     
-    <!-- (22)HJT-GSM的端口号 -->
+    <!-- (23)HJT-GSM的端口号 -->
     <add key="strStartPortGSM_HJT" value="14785" />
 
-    <!-- (23)LTE的端口号 -->
+    <!-- (24)LTE的端口号 -->
     <add key="strStartPortLTE" value="14786" />
 
-    <!-- (24)TDS的端口号 -->
+    <!-- (25)TDS的端口号 -->
     <add key="strStartPortTDS" value="14787" />        
 
-    <!-- (25)WCDMA的端口号 -->
+    <!-- (26)WCDMA的端口号 -->
     <add key="strStartPortWCDMA" value="14788" />
 
-    <!-- (26)Windows的端口号 -->
+    <!-- (27)Windows的端口号 -->
     <add key="strStartPortAppWindows" value="14789" />
 
-    <!-- (27)Linux的端口号 -->
+    <!-- (28)Linux的端口号 -->
     <add key="strStartPortAppLinux" value="14790" />
 
-    <!-- (28)Android的端口号 -->
+    <!-- (29)Android的端口号 -->
     <add key="strStartPortAppAndroid" value="14791" />
 
-    <!-- (29)Ap在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为AP下线） -->
+    <!-- (30)Ap在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为AP下线） -->
     <add key="apOnLineTime"  value="30" />
 
-    <!-- (30)App在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为APp下线） -->
+    <!-- (31)App在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为APp下线） -->
     <add key="appOnLineTime" value="80" />
     
-    <!-- (31)数据库最大的Idle时间，秒数 -->
+    <!-- (32)数据库最大的Idle时间，秒数 -->
     <add key="strDbMaxIdleSeconds" value="30" />
     
-    <!-- (32)FTP的最大Idle时间，秒数 -->
+    <!-- (33)FTP的最大Idle时间，秒数 -->
     <add key="strFtpMaxIdleSeconds" value="60" />      
     
-    <!-- (33)检查FTP Server的连接状态的频率，秒数 -->
+    <!-- (34)检查FTP Server的连接状态的频率，秒数 -->
     <add key="checkFtpConnStat" value="60" />
         
-    <!-- (34)对捕到的号是否进行去掉重复处理 -->
+    <!-- (35)对捕到的号是否进行去掉重复处理 -->
     <add key="removeDupMode" value="0" />
 
-    <!-- (35)去重的时间长度，分钟-->
+    <!-- (36)去重的时间长度，分钟-->
     <add key="removeDupTimeLength" value="120" />
 
-    <!-- (36)搜索历史记录的页大小，记录数-->
+    <!-- (37)搜索历史记录的页大小，记录数-->
     <add key="recordsOfPageSize" value="200" />
 
-    <!-- (37)计时器的超时时间，单位(秒) -->
+    <!-- (38)计时器的超时时间，单位(秒) -->
     <add key="timerTimeOutInterval" value="5" />
 
-    <!-- (38)是否用模拟器进行性能测试 -->
+    <!-- (39)是否用模拟器进行性能测试 -->
     <add key="simuTest" value="0" />
 
-    <!-- (39)数据对齐基准:0数据库为基准，1以Ap为基准，2不对齐 -->
+    <!-- (40)数据对齐基准:0数据库为基准，1以Ap为基准 -->
     <add key="dataAlignMode" value="1" />
 
-    <!-- (40)号码归属地计算方式：0直接从接口，1接口加哈希 -->
-    <add key="imsiParseMode" value="1" />
+    <!-- (41)号码归属地计算方式：0直接从接口，1接口加哈希 -->
+    <add key="imsiParseMode" value="0" />
     
-    <!-- (41)号码归属地内存保存的最大个数 -->
+    <!-- (42)号码归属地内存保存的最大个数 -->
     <add key="imsiParseMaxCnt" value="20000" />
 
-    <!-- (42)每个Log文件的大小，单位为MB -->
+    <!-- (43)每个Log文件的大小，单位为MB -->
     <add key="logMaxSize" value="10" />
 
-    <!-- (43)Logger的最大Idle时间，秒数 -->
+    <!-- (44)Logger的最大Idle时间，秒数 -->
     <add key="logMaxIdleSeconds" value="10" />
+    
+    <!-- (45)AP直接上传FTP的开关：0不使能，1使能 -->
+    <add key="apFtpUploadEnable" value="0" />
+    
+    <!-- (46)检查ApFfp是否有文件上传的频率，秒数 -->
+    <add key="checkApFtpUploadFile" value="5" />
+    
+    <!-- (47)文件名格式定义,分隔符固定为"_",而且务必包含%A -->
+    <add key="apFtpUploadNameFormat" value="%A_[%#I]_%04y_%02m_%02d_%02h_%02f_%02s.pns" />
+    
+    <!-- (48)数据格式定义,分隔符固定为"," -->
+    <add key="apFtpUploadDataFormat" value="%E,%S,%U,%04y-%02m-%02d %02h:%02f:%02s,%R,%.6J,%.6W,%O\r\n" />
+    
+    <!-- (49)IMSI的分析阈值,缺省70% -->
+    <add key="imsiThresholdValue" value="0.7" />
 
   </appSettings>
 </configuration>
