增加第三方接口

--- a/ScannerBackgrdServer/App.config
+++ b/ScannerBackgrdServer/App.config
@@ -128,6 +128,9 @@
     <!-- (29)Android的端口号 -->
     <add key="strStartPortAppAndroid" value="14791" />
 
+	<!-- (29)Android的端口号 -->
+     <add key="strStartPortAppThirdParty" value="14792" />
+
     <!-- (30)Ap在线检测时间。单位(秒)（如果在该时间内未收到AP的心跳消息，认为AP下线） -->
     <add key="apOnLineTime"  value="30" />
 
